assets/css/styles.css
* {
  margin: 0px;
  box-sizing: border-box;
}

body {
  background-color: #111;
  color: #FFF;
  font-family: 'Open Sans Condensed', sans-serif;
}

header {
  position: absolute;
  top: 0;
  width: 100%;
  height: auto;
  z-index: 3;
}

.header-container {
  text-align: right;
  padding: 16px 20px 16px 20px;
}
  .header-container p {
    letter-spacing: 2px;
  }

.hero {
  position: relative;
}
  .hero h1 {
    font-size: 36px;
    text-transform: uppercase;
    color: #e74c3c;
  }
  .hero p {
    font-size: 18px;
    color: #bdc3c7;
  }
  .hero h1,
  .hero p {
    margin-bottom: 10px;
  }
  .hero .content {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    letter-spacing: 3px;
    padding: 40px;
    text-align: center;
    background: rgba(17, 17, 17, .8);
    width: 100%;
  }

.icon {
  width: 25px;
  height: 25px;
}

.social-icons {
  margin-top: 0px;
  margin-bottom: 10px;
}
.social-icons > ul {
  list-style: none;
  padding: 0;
  display: flex;
  justify-content: center;  
}
.social-icon {
  text-decoration: none;
  margin: 0 10px;
}

.hero-nav {
  text-align: center;
  margin: 1.5rem 1rem;
}
  .hero-nav a {    
    display: inline-block;
    font-family: Arial, Helvetica, sans-serif;
    color: #fff;
    padding: 14px 20px;
    border: 1px solid #fff;
    text-decoration: none;
    border-radius: 5px;
    letter-spacing: 0px;
    transition: .3s;
  }
  .hero-nav a:hover,
  .hero-nav a:focus-visible {
    background-color: #fff;
    color: #e74c3c;
  }

.game-nav {
  position: absolute;
  left: 50%;
  bottom: 5%;
  transform: translateX(-50%);
  z-index: 3;
}
.btn-pause {  
  display: inline-block;
  color: #fff;
  padding: 10px;
  opacity: .4; 
  text-decoration: none;
  letter-spacing: 1px;
  cursor: pointer;
}

